--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,6 @@ dependencies {
     compile 'com.google.api-client:google-api-client:1.22.0'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.22.0'
     compile 'com.google.apis:google-api-services-calendar:v3-rev208-1.22.0'
-
+		compile(project(':magister-api'))
 
 }
