Fix shit, vergeet JSON bestand van google niet als je build..

--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,9 @@ dependencies {
 run {
     standardInput = System.in
 }
+
+jar {
+	from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+	manifest { attributes 'Main-Class': mainClassName }
+}
+
